--- a/cvelib-howto.conf
+++ b/cvelib-howto.conf
@@ -8,4 +8,4 @@ oldUserNameFirst=Fu
 oldUserNameLast=Bar
 newUserID=foo@paleozoic.example.com
 newUserNameFirst=Foo
-newUserNameLast="$oldUserNameLast"
+newUserNameLast=Bar
