--- a/cvelib.conf
+++ b/cvelib.conf
@@ -13,7 +13,7 @@ CVE_ENVIRONMENT=
 # usually an email address
 CVE_USER=
 
-# short CNA name
+# short CNA name, case sensitive
 CVE_ORG=
 
 # this is a secret
