clear demo user variables

--- a/cvelib-howto.conf
+++ b/cvelib-howto.conf
@@ -3,9 +3,9 @@
 #
 # change these for a fresh demo
 #
-oldUserID=fu@paleozoic.example.com
-oldUserNameFirst=Fu
-oldUserNameLast=Bar
-newUserID=foo@paleozoic.example.com
-newUserNameFirst=Foo
-newUserNameLast=Bar
+oldUserID=
+oldUserNameFirst=
+oldUserNameLast=
+newUserID=
+newUserNameFirst=
+newUserNameLast=
