--- a/cvelib-howto.conf.sample
+++ b/cvelib-howto.conf.sample
@@ -1,5 +1,5 @@
 #
-# cvelib-howto.sh and cvelib-howto.bat configuration
+# cvelib-howto.sh and cvelib-howto.cmd configuration
 #
 # change these for a fresh demo
 #
